tests/failing/var_var.db
var var name = "Luke"!
name = "Lu"!
name.push("k")!
name.push("e")!